--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -16,4 +16,6 @@
     <dimen name="margin_medium">10dp</dimen>
     <dimen name="margin_large">20dp</dimen>
     <dimen name="btn_height">50dp</dimen>
+    <dimen name="feed_item_height">120dp</dimen>
+    <dimen name="feed_item_image_size">80dp</dimen>
 </resources>
